Fix header contacts alignment and card text alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,7 @@ img {
     text-decoration: none;
     font-style: normal;
     padding: 24px 0;
+    margin-left:auto;
 }
 
 .address:hover,
@@ -114,7 +115,6 @@ img {
 .contacts {
     display: flex;
     gap: 40px;
-    margin-left: auto;
 }
 
 .hero-screene .container {
@@ -244,7 +244,6 @@ p {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    text-align: center;
     padding: 32px 16px;
 }
 
